--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,8 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Exercise Programmer</title>
-    <script src="https://kit.fontawesome.com/d3afc69bec.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
